--- a/index.html
+++ b/index.html
@@ -497,8 +497,8 @@ a[href]:after {
             <h2><i class="fa fa-bullseye ico"></i> Contact</h2>
             <div class="contact-item">
               <div class="icon pull-left text-center"><span class="fa fa-map-marker fa-fw"></span></div>
-              <div class="title pull-right">29/5 Hillel St.</div>
-              <div class="description pull-right">Haifa, 3307223 IL</div>
+              <div class="title pull-right">Prinzenallee 17</div>
+              <div class="description pull-right">Berlin, 13357 DE</div>
             </div>
             <div class="contact-item">
               <div class="icon pull-left text-center"><span class="fa fa-phone fa-fw"></span></div>
