changed initials to capitals in linkedin href

--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@ a[href]:after {
             <div class="contact-item">
               <div class="icon pull-left text-center"><span class="fa fa-linkedin-square fa-fw"></span></div>
               <div class="title pull-right">Linkedin</div>
-              <div class="description pull-right"><a href="https://il.linkedin.com/in/yotam-katznelson-59261493" target="_blank">yotam katznelson</a></div>
+              <div class="description pull-right"><a href="https://il.linkedin.com/in/yotam-katznelson-59261493" target="_blank">Yotam Katznelson</a></div>
             </div>
           </div>
           <!-- EDUCATION -->
