--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Resume of Yotam Katznelson</title>
     <link href="./resume_kendall/bootstrap.min.css" rel="stylesheet">
-    <link href="./resume_kendall/font-awesome.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
     <style type="text/css">
-    @import url(//fonts.googleapis.com/css?family=Open+Sans:400,600,700,800);
+    @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800);
 @charset "utf-8";
 @-webkit-viewport   { width: device-width; }
 @-moz-viewport      { width: device-width; }
@@ -410,7 +410,7 @@ a[href]:after {
                       HALO Analytics is a cyber security company that develops an integrated HW-SW solution to protect end-point machinery in various industries
                       <div class="highlights">Highlights</div>
                       <ul class="list-group">
-                        <li class="list-group-item">Defined the product and executed its implementation from the POC to the scaled up solution</li>
+                        <li class="list-group-item">Defined the product and executed its implementation from nothing to the POC and to the scaled up solution</li>
                       </ul>
                     </div>
                   </div>
@@ -490,6 +490,29 @@ a[href]:after {
                 </div>
               </div>
           </div>
+          <!-- VOLUNTEER -->
+          <div class="box">
+            <h2><i class="fa fa-group ico"></i> Volunteer</h2>
+              <div class="job clearfix">
+                <div class="row">
+                  <div class="details">
+                    <div class="where">Media Noche Salsa</div>
+                    <div class="address">
+                      <a href="http://www.media-noche.org/" target="_blank"><i class="fa fa-globe ico"></i> http://www.media-noche.org/</a>
+                    </div>
+                    <div class="year">November 2009 – April 2013</div>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-xs-11 pull-right">
+                    <div class="profession">VP &amp; Dance Instructor</div>
+                    <div class="description">
+                      Board member and instructor in a free-of-charge dance club / organization
+                    </div>
+                  </div>
+                </div>
+              </div>
+          </div>
         </div>
         <div class="col-xs-12 col-sm-5">
           <!-- CONTACT -->
@@ -511,7 +534,7 @@ a[href]:after {
             <div class="contact-item">
               <div class="icon pull-left text-center"><span class="fa fa-linkedin-square fa-fw"></span></div>
               <div class="title pull-right">Linkedin</div>
-              <div class="description pull-right"><a href="https://il.linkedin.com/in/yotam-katznelson-59261493" target="_blank">Yotam Katznelson</a></div>
+              <div class="description pull-right"><a href="https://il.linkedin.com/in/yotam-katznelson-59261493" target="_blank">yotam katznelson</a></div>
             </div>
           </div>
           <!-- EDUCATION -->
