updated v15 volunteering, added HALO highlights

--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!-- saved from url=(0046)http://registry.jsonresume.org/yotamkatznelson -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
     <meta charset="utf-8">
@@ -9,7 +8,7 @@
     <link href="./resume_kendall/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
     <style type="text/css">
-    @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800);
+    @import url(//fonts.googleapis.com/css?family=Open+Sans:400,600,700,800);
 @charset "utf-8";
 @-webkit-viewport   { width: device-width; }
 @-moz-viewport      { width: device-width; }
@@ -399,7 +398,7 @@ a[href]:after {
               <div class="job clearfix">
                 <div class="row">
                   <div class="details">
-                    <div class="where">HALO Analytics</div>
+                    <div class="where">HALO Analytics, Israel</div>
                     <div class="year">April 2015 – Present</div>
                   </div>
                 </div>
@@ -410,7 +409,9 @@ a[href]:after {
                       HALO Analytics is a cyber security company that develops an integrated HW-SW solution to protect end-point machinery in various industries
                       <div class="highlights">Highlights</div>
                       <ul class="list-group">
-                        <li class="list-group-item">Defined the product and executed its implementation from nothing to the POC and to the scaled up solution</li>
+                        <li class="list-group-item">Defined the product and executed its implementation from pre-planning to the POC and the scaled solution</li>
+                        <li class="list-group-item">Consulting and directing the company's technological aspects</li>
+                        <li class="list-group-item">Successfully delivered product's iterations in pressing time tables and demanding environments</li>
                       </ul>
                     </div>
                   </div>
@@ -419,7 +420,7 @@ a[href]:after {
               <div class="job clearfix">
                 <div class="row">
                   <div class="details">
-                    <div class="where">Quickest Owl Ltd.</div>
+                    <div class="where">Quickest Owl Ltd., Israel</div>
                     <div class="address">
                       <a href="http://registry.jsonresume.org/www.quickest-owl.com" target="_blank"><i class="fa fa-globe ico"></i> www.quickest-owl.com</a>
                     </div>
@@ -442,7 +443,7 @@ a[href]:after {
               <div class="job clearfix">
                 <div class="row">
                   <div class="details">
-                    <div class="where">Ayyeka Technologies Ltd.</div>
+                    <div class="where">Ayyeka Technologies Ltd., Jerusalem, Israel</div>
                     <div class="address">
                       <a href="http://registry.jsonresume.org/www.ayyeka.com" target="_blank"><i class="fa fa-globe ico"></i> www.ayyeka.com</a>
                     </div>
@@ -467,7 +468,7 @@ a[href]:after {
               <div class="job clearfix">
                 <div class="row">
                   <div class="details">
-                    <div class="where">Mapegy GmbH</div>
+                    <div class="where">Mapegy GmbH, Berlin, Germny</div>
                     <div class="address">
                       <a href="http://registry.jsonresume.org/www.mapegy.com" target="_blank"><i class="fa fa-globe ico"></i> www.mapegy.com</a>
                     </div>
@@ -508,6 +509,31 @@ a[href]:after {
                     <div class="profession">VP &amp; Dance Instructor</div>
                     <div class="description">
                       Board member and instructor in a free-of-charge dance club / organization
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="job clearfix">
+                <div class="row">
+                  <div class="details">
+                    <div class="where">V15</div>
+                    <div class="address">
+                      <a href="http://registry.jsonresume.org/www.v15.org.il" target="_blank"><i class="fa fa-globe ico"></i> www.v15.org.il</a>
+                    </div>
+                    <div class="year">February 2015 – April 2015</div>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-xs-11 pull-right">
+                    <div class="profession">Digital campaign team member</div>
+                    <div class="description">
+                      Took part in the biggest (to date) non party related political campaign.
+                      <div class="highlights">Highlights</div>
+                      <ul class="list-group">
+                        <li class="list-group-item">Co-created and maintained front app that served millions of users and more then 100K unique per day</li>
+                        <li class="list-group-item">Co-created and maintained advanced internal CRM that supported the whole organization</li>
+                        <li class="list-group-item">Assisted the research team by creating advanced analytical tools</li>
+                      </ul>
                     </div>
                   </div>
                 </div>
@@ -606,9 +632,9 @@ a[href]:after {
           <div class="box">
             <h2><i class="fa fa-language ico"></i> Languages</h2>
             <ul class="list-group">
-              <li class=" list-group-item">Hebrew<span class="skill badge pull-right">Mother Tongue</span></li>
-              <li class=" list-group-item">English<span class="skill badge pull-right">Full Professional Proficiency</span></li>
-              <li class=" list-group-item">German<span class="skill badge pull-right">Elementary Proficiency</span></li>
+              <li class=" list-group-item">Hebrew<span class="skill badge pull-right">Mother tongue</span></li>
+              <li class=" list-group-item">English<span class="skill badge pull-right">Full professional proficiency</span></li>
+              <li class=" list-group-item">German<span class="skill badge pull-right">Limited working proficiency</span></li>
             </ul>
           </div>
           <div class="box">
