added end date for halo, changed volunteering order

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
+<html lang="en"><head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -370,7 +370,7 @@ a[href]:after {
 
     </style>
   </head>
-  <body cz-shortcut-listen="true">
+  <body>
     <div class="container">
       <div class="row">
         <div class="col-xs-12">
@@ -390,7 +390,11 @@ a[href]:after {
           <!-- ABOUT ME -->
           <div class="box">
             <h2><i class="fa fa-user ico"></i> About</h2>
-            <p>Originally from Kiryat TIvon, Israel. I joined the Hebrew university of Jerusalem in 2009, after serving 3 years in the Israeli navy commando. Finished my B.Sc in 2014 and by then developed an appetite for a wide range of technological subjects. Discovered early on, how much there is to learn and working on it on a daily basis.</p>
+            <p>Originally from Kiryat TIvon, Israel. I joined the Hebrew
+ university of Jerusalem in 2009, after serving 3 years in the Israeli
+navy commando. Finished my B.Sc in 2014 and by then developed an
+appetite for a wide range of technological subjects. Discovered early
+on, how much there is to learn and working on it on a daily basis.</p>
           </div>
           <!-- WORK EXPERIENCE -->
           <div class="box">
@@ -399,17 +403,20 @@ a[href]:after {
                 <div class="row">
                   <div class="details">
                     <div class="where">HALO Analytics, Israel</div>
-                    <div class="year">April 2015 – Present</div>
+                    <div class="year">April 2015 – February 2016</div>
                   </div>
                 </div>
                 <div class="row">
                   <div class="job-details col-xs-11">
                     <div class="profession">VP Engineering</div>
                     <div class="description">
-                      HALO Analytics is a cyber security company that develops an integrated HW-SW solution to protect end-point machinery in various industries
+                      HALO Analytics is a cyber security company that
+develops an integrated HW-SW solution to protect end-point machinery in
+various industries
                       <div class="highlights">Highlights</div>
                       <ul class="list-group">
-                        <li class="list-group-item">Defined the product and executed its implementation from pre-planning to the POC and the scaled solution</li>
+                        <li class="list-group-item">Defined the product and executed its implementation from pre-planning to the POC and beta</li>
+                        <li class="list-group-item">Planned and defined proccesses for the product wide scale phase</li>
                         <li class="list-group-item">Consulting and directing the company's technological aspects</li>
                         <li class="list-group-item">Successfully delivered product's iterations in pressing time tables and demanding environments</li>
                       </ul>
@@ -431,7 +438,9 @@ a[href]:after {
                   <div class="job-details col-xs-11">
                     <div class="profession">Freelancer Software Engineer</div>
                     <div class="description">
-                      Quickest Owl is a company centered around analyzing and implementing low &amp; high technological solutions for 3rd party companies
+                      Quickest Owl is a company centered around
+analyzing and implementing low &amp; high technological solutions for
+3rd party companies
                       <div class="highlights">Highlights</div>
                       <ul class="list-group">
                         <li class="list-group-item">Developed frontend and backend for a massive active protection system</li>
@@ -454,10 +463,15 @@ a[href]:after {
                   <div class="job-details col-xs-11">
                     <div class="profession">Application Engineer</div>
                     <div class="description">
-                      Ayyeka develops low  energy remote monitoring solutions for various industries. Ayyeka provides holistic autonomous data collection system that integrates with cloud services and enables comprehensive insights on the collected data
+                      Ayyeka develops low  energy remote monitoring
+solutions for various industries. Ayyeka provides holistic autonomous
+data collection system that integrates with cloud services and enables
+comprehensive insights on the collected data
                       <div class="highlights">Highlights</div>
                       <ul class="list-group">
-                        <li class="list-group-item">Managed the company devops section. Was the mediator between the costumers and the engineers. Facilitated enhancements and resolutions for various subjects</li>
+                        <li class="list-group-item">Managed the company
+devops section. Was the mediator between the costumers and the
+engineers. Facilitated enhancements and resolutions for various subjects</li>
                         <li class="list-group-item">Developed essential monitoring systems for the company products</li>
                         <li class="list-group-item">The "quick &amp; dirty guy" for high demand quick solutions for any technological development problem</li>
                       </ul>
@@ -479,7 +493,9 @@ a[href]:after {
                   <div class="job-details col-xs-11">
                     <div class="profession">Web developer</div>
                     <div class="description">
-                      Mapegy GmbH is a business consulting agency that provides high tech and innovation consulting, derived from collection massive data sources
+                      Mapegy GmbH is a business consulting agency that
+provides high tech and innovation consulting, derived from collection
+massive data sources
                       <div class="highlights">Highlights</div>
                       <ul class="list-group">
                         <li class="list-group-item">Developed the company frontend and backend</li>
@@ -494,25 +510,6 @@ a[href]:after {
           <!-- VOLUNTEER -->
           <div class="box">
             <h2><i class="fa fa-group ico"></i> Volunteer</h2>
-              <div class="job clearfix">
-                <div class="row">
-                  <div class="details">
-                    <div class="where">Media Noche Salsa</div>
-                    <div class="address">
-                      <a href="http://www.media-noche.org/" target="_blank"><i class="fa fa-globe ico"></i> http://www.media-noche.org/</a>
-                    </div>
-                    <div class="year">November 2009 – April 2013</div>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="col-xs-11 pull-right">
-                    <div class="profession">VP &amp; Dance Instructor</div>
-                    <div class="description">
-                      Board member and instructor in a free-of-charge dance club / organization
-                    </div>
-                  </div>
-                </div>
-              </div>
               <div class="job clearfix">
                 <div class="row">
                   <div class="details">
@@ -534,6 +531,25 @@ a[href]:after {
                         <li class="list-group-item">Co-created and maintained advanced internal CRM that supported the whole organization</li>
                         <li class="list-group-item">Assisted the research team by creating advanced analytical tools</li>
                       </ul>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="job clearfix">
+                <div class="row">
+                  <div class="details">
+                    <div class="where">Media Noche Salsa</div>
+                    <div class="address">
+                      <a href="http://www.media-noche.org/" target="_blank"><i class="fa fa-globe ico"></i> http://www.media-noche.org/</a>
+                    </div>
+                    <div class="year">November 2009 – April 2013</div>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-xs-11 pull-right">
+                    <div class="profession">VP &amp; Dance Instructor</div>
+                    <div class="description">
+                      Board member and instructor in a free-of-charge dance club / organization
                     </div>
                   </div>
                 </div>
@@ -640,13 +656,20 @@ a[href]:after {
           <div class="box">
             <h2><i class="fa fa-check-square ico"></i> References</h2>
             <blockquote>
-              <div>Mr. Katznelson  proved to be a valuable team member, handling numerous tasks that require both   high level of creativity and ‘getting things done’ attitude.</div>
+              <div>Mr. Katznelson  proved to be a valuable team member,
+handling numerous tasks that require both   high level of creativity and
+ ‘getting things done’ attitude.</div>
               <footer>
                 <a href="" target="_blank">Ariel Stern, CEO, Ayyeka Technologies Ltd.</a>
               </footer>
             </blockquote><br>
             <blockquote>
-              <div>Yotam Katznelson showed an excellent experience and knowledge in many fields, both technical and intellectual. He skillfully connected various areas of research and articulated them in accessible and creative ways. He has brought his own approach and gumption into the projects and worked dedicatedly and independently with high degree of self-motivation.</div>
+              <div>Yotam Katznelson showed an excellent experience and
+knowledge in many fields, both technical and intellectual. He skillfully
+ connected various areas of research and articulated them in accessible
+and creative ways. He has brought his own approach and gumption into the
+ projects and worked dedicatedly and independently with high degree of
+self-motivation.</div>
               <footer>
                 <a href="" target="_blank">Dr. Peter Walde, CEO, Mapegy GmbH</a>
               </footer>
@@ -660,11 +683,6 @@ a[href]:after {
     <!-- BOOTSTRAP -->
     <script src="./resume_kendall/bootstrap.min.js"></script>
 
-  <script type="text/javascript">
-/* <![CDATA[ */
-(function(){try{var s,a,i,j,r,c,l=document.getElementsByTagName("a"),t=document.createElement("textarea");for(i=0;l.length-i;i++){try{a=l[i].getAttribute("href");if(a&&a.indexOf("/cdn-cgi/l/email-protection") > -1  && (a.length > 28)){s='';j=27+ 1 + a.indexOf("/cdn-cgi/l/email-protection");if (a.length > j) {r=parseInt(a.substr(j,2),16);for(j+=2;a.length>j&&a.substr(j,1)!='X';j+=2){c=parseInt(a.substr(j,2),16)^r;s+=String.fromCharCode(c);}j+=1;s+=a.substr(j,a.length-j);}t.innerHTML=s.replace(/</g,"&lt;").replace(/>/g,"&gt;");l[i].setAttribute("href","mailto:"+t.value);}}catch(e){}}}catch(e){}})();
-/* ]]> */
-</script>
-
+  <script type="text/javascript">/* <![CDATA[ */(function(d,s,a,i,j,r,l,m){try{l=d.getElementsByTagName('a');t=d.createElement('textarea');for(i=0;l.length-i;i++){try{a=l[i].href;s=a.indexOf('/cdn-cgi/l/email-protection');m=a.length;if(a&&s>-1&&m>28){j=28+s;s='';if(j<m){r='0x'+a.substr(j,2)|0;for(j+=2;j<m&&a.charAt(j)!='X';j+=2)s+='%'+('0'+('0x'+a.substr(j,2)^r).toString(16)).slice(-2);j++;s=decodeURIComponent(s)+a.substr(j,m-j)}t.innerHTML=s.replace(/</g,'&lt;').replace(/>/g,'&gt;');l[i].href='mailto:'+t.value}}catch(e){}}}catch(e){}})(document);/* ]]> */</script>
 
 </body></html>
