minor changes directly to index.html

--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@ provides high tech and innovation consulting, derived from collection
 massive data sources
                       <div class="highlights">Highlights</div>
                       <ul class="list-group">
-                        <li class="list-group-item">Developed the company frontend and backend</li>
+                        <li class="list-group-item">Worked on the company frontend and backend</li>
                         <li class="list-group-item">Created extensive platforms for data visualization</li>
                         <li class="list-group-item">Built tools for the company analysts</li>
                       </ul>
