changed subtitle font

--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
 			
 			.summary {
 				font-family: "Pt mono";
-				font-size: 1.2em;
+				/*font-size: 1.2em;*/
+				font-size: 14px;
 			}
 			
 			.wip {
