--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
 					<h2 class="oswald-font"><span class="fa fa-mortar-board"></span>&nbsp; Skills</h2>
 					<hr>
 					<div class="col-md-10">
-							<h4> Software Engineer </h4>
+							<!-- <h4> Software Engineer </h4> -->
 							<h5><b></b></h5>
 								<span class="badge" style="background-color : #67809F;padding: 0.5em 0.5em 5px 0.5em;margin: 0 0 5px 0;">Python</span> 
 								<span class="badge" style="background-color : #67809F;padding: 0.5em 0.5em 5px 0.5em;margin: 0 0 5px 0;">Java</span> 
