fixed typo, added full stack badge skill

--- a/index.html
+++ b/index.html
@@ -22,63 +22,63 @@
 			.name {
 				text-transform: uppercase;
 			}
-			
+
 			a:hover {
 				text-decoration: none;
 			}
-			
+
 			.link-github {
 				color: #454545;
 			}
-			
+
 			.link-github:hover {
 				color: black;
 			}
-			
+
 			.link-twitter {
 				color: #33CCFF;
 			}
-			
+
 			.social-link {
 				margin-left: 5px;
 			}
-			
+
 			.social-link:first-child {
 				margin-left: 0;
 			}
-			
+
 			.link-blog {
 				color: rgb(243, 111, 36);
 			}
-			
+
 			.link-blog:hover {
 				color: rgb(211, 97, 32);
 			}
-			
+
 			.summary {
 				font-family: "Pt mono";
 				/*font-size: 1.2em;*/
 				font-size: 14px;
 			}
-			
+
 			.wip {
 				position: absolute;
 				right: 0;
 			}
-			
+
 			.item-detail h3 {
 				margin-top: 0;
 			}
 		</style>
 	</head>
-	
+
 	<body>
 		<div class="container">
 
 			<div class="col-md-10 col-md-offset-1">
 			<br>
 				<div class="col-md-2">
-        				<img class="media-object img-circle pull-right" 
+        				<img class="media-object img-circle pull-right"
 							data-src="holder.js/64x64" alt="64x64" src="https:&#x2F;&#x2F;media.licdn.com&#x2F;mpr&#x2F;mpr&#x2F;shrinknp_400_400&#x2F;p&#x2F;8&#x2F;005&#x2F;04f&#x2F;134&#x2F;103adbe.jpg"
 							style="width: 150px; height: 150px;">
 				</div>
@@ -87,7 +87,7 @@
 					<hr>
 					<p class="location text col-md-6">
 						<span class="fa fa-location-arrow"></span>
-						Esplanade 5, Berlin, , DE 13187
+						Esplanade 5, Berlin, DE 13187
 						<br>
 						<span class="social-links-wrapper">
 							<a href="https:&#x2F;&#x2F;il.linkedin.com&#x2F;in&#x2F;yotam-katznelson-59261493" target="_blank">Linkedin</a>&nbsp;&nbsp;
@@ -116,12 +116,12 @@
 					<div class="col-md-10">
 							<div class="item-detail">
 								<h3>
-									<span>Senior software engineer</span> 
+									<span>Senior software engineer</span>
 									<span class="pull-right">( 2016 - Present )</span>
 								</h3>
 								<h4>
 									<a target="_blank" href="www.mapegy.com">
-										@Mapegy GmbH, Berlin, Germny 
+										@Mapegy GmbH, Berlin, Germny
 									</a>
 								</h4>
 								<p class="text-muted">In this position I focus on two major fields: Full stack developer, focusing on delivering fast and optimized results of the product both on front and back. The second is as data engineer, creating and translating ideas into actions and expand the data universe of the company.</p>
@@ -134,12 +134,12 @@
 							<hr>
 							<div class="item-detail">
 								<h3>
-									<span>VP Engineering</span> 
+									<span>VP Engineering</span>
 									<span class="pull-right">( 2015 - 2016 )</span>
 								</h3>
 								<h4>
 									<a target="_blank" href="">
-										@HALO Analytics, Israel 
+										@HALO Analytics, Israel
 									</a>
 								</h4>
 								<p class="text-muted">HALO Analytics is a cyber security company that develops an integrated HW-SW solution to protect end-point machinery in various industries</p>
@@ -153,12 +153,12 @@
 							<hr>
 							<div class="item-detail">
 								<h3>
-									<span>Application Engineer</span> 
+									<span>Application Engineer</span>
 									<span class="pull-right">( 2013 - 2015 )</span>
 								</h3>
 								<h4>
 									<a target="_blank" href="www.ayyeka.com">
-										@Ayyeka Technologies Ltd., Jerusalem, Israel 
+										@Ayyeka Technologies Ltd., Jerusalem, Israel
 									</a>
 								</h4>
 								<p class="text-muted">Ayyeka develops low  energy remote monitoring solutions for various industries. Ayyeka provides holistic autonomous data collection system that integrates with cloud services and enables comprehensive insights on the collected data</p>
@@ -171,12 +171,12 @@
 							<hr>
 							<div class="item-detail">
 								<h3>
-									<span>Freelancer Software Engineer</span> 
+									<span>Freelancer Software Engineer</span>
 									<span class="pull-right">( 2013 - 2015 )</span>
 								</h3>
 								<h4>
 									<a target="_blank" href="www.quickest-owl.com">
-										@Quickest Owl Ltd., Israel 
+										@Quickest Owl Ltd., Israel
 									</a>
 								</h4>
 								<p class="text-muted">Quickest Owl is a company centered around analyzing and implementing low &amp; high technological solutions for 3rd party companies </p>
@@ -187,12 +187,12 @@
 							<hr>
 							<div class="item-detail">
 								<h3>
-									<span>Web developer</span> 
+									<span>Web developer</span>
 									<span class="pull-right">( 2012 )</span>
 								</h3>
 								<h4>
 									<a target="_blank" href="www.mapegy.com">
-										@Mapegy GmbH, Berlin, Germny 
+										@Mapegy GmbH, Berlin, Germny
 									</a>
 								</h4>
 								<p class="text-muted">Mapegy GmbH is a business consulting agency that provides high tech and innovation consulting, derived from collection massive data sources</p>
@@ -208,11 +208,11 @@
 				<div class="col-md-12">
 					<h2 class="oswald-font"><span class="fa fa-university"></span>&nbsp; Education</h2>
 					<hr>
-					<div class="col-md-10">			
+					<div class="col-md-10">
 							<div class="item-detail">
 								<h3>Hebrew University of Jerusalem</h3>
 								<h4>Electric Engineering, Major in Computer Engineering, Bachelor</h4>
-								
+
 								<h5>2009 - 2014</h5>
 							</div>
 							<ul>
@@ -231,7 +231,7 @@
 							<div class="item-detail">
 								<h3>Technical University Berlin</h3>
 								<h4>Technology Innovation Management, Exchange Student, M.B.A Program</h4>
-								
+
 								<h5>2012</h5>
 							</div>
 							<ul>
@@ -247,20 +247,21 @@
 					<div class="col-md-10">
 							<!-- <h4> Software Engineer </h4> -->
 							<h5><b></b></h5>
-								<span class="badge" style="background-color : #67809F;padding: 0.5em 0.5em 5px 0.5em;margin: 0 0 5px 0;">Python</span> 
-								<span class="badge" style="background-color : #67809F;padding: 0.5em 0.5em 5px 0.5em;margin: 0 0 5px 0;">Java</span> 
-								<span class="badge" style="background-color : #67809F;padding: 0.5em 0.5em 5px 0.5em;margin: 0 0 5px 0;">C++</span> 
-								<span class="badge" style="background-color : #67809F;padding: 0.5em 0.5em 5px 0.5em;margin: 0 0 5px 0;">Frontend</span> 
-								<span class="badge" style="background-color : #67809F;padding: 0.5em 0.5em 5px 0.5em;margin: 0 0 5px 0;">Backend</span> 
-								<span class="badge" style="background-color : #67809F;padding: 0.5em 0.5em 5px 0.5em;margin: 0 0 5px 0;">Databases</span> 
-								<span class="badge" style="background-color : #67809F;padding: 0.5em 0.5em 5px 0.5em;margin: 0 0 5px 0;">Big Data</span> 
-								<span class="badge" style="background-color : #67809F;padding: 0.5em 0.5em 5px 0.5em;margin: 0 0 5px 0;">Machine Learning</span> 
-								<span class="badge" style="background-color : #67809F;padding: 0.5em 0.5em 5px 0.5em;margin: 0 0 5px 0;">Full stack</span> 
-								<span class="badge" style="background-color : #67809F;padding: 0.5em 0.5em 5px 0.5em;margin: 0 0 5px 0;">Scripting</span> 
-								<span class="badge" style="background-color : #67809F;padding: 0.5em 0.5em 5px 0.5em;margin: 0 0 5px 0;">Rapid prototyping</span> 
-								<span class="badge" style="background-color : #67809F;padding: 0.5em 0.5em 5px 0.5em;margin: 0 0 5px 0;">Development Boards</span> 
-								<span class="badge" style="background-color : #67809F;padding: 0.5em 0.5em 5px 0.5em;margin: 0 0 5px 0;">git</span> 
-								<span class="badge" style="background-color : #67809F;padding: 0.5em 0.5em 5px 0.5em;margin: 0 0 5px 0;">Data visualization</span> 
+								<span class="badge" style="background-color : #67809F;padding: 0.5em 0.5em 5px 0.5em;margin: 0 0 5px 0;">Python</span>
+								<span class="badge" style="background-color : #67809F;padding: 0.5em 0.5em 5px 0.5em;margin: 0 0 5px 0;">Java</span>
+								<span class="badge" style="background-color : #67809F;padding: 0.5em 0.5em 5px 0.5em;margin: 0 0 5px 0;">C++</span>
+								<span class="badge" style="background-color : #67809F;padding: 0.5em 0.5em 5px 0.5em;margin: 0 0 5px 0;">Frontend</span>
+								<span class="badge" style="background-color : #67809F;padding: 0.5em 0.5em 5px 0.5em;margin: 0 0 5px 0;">Backend</span>
+								<span class="badge" style="background-color : #67809F;padding: 0.5em 0.5em 5px 0.5em;margin: 0 0 5px 0;">Full stack</span>
+								<span class="badge" style="background-color : #67809F;padding: 0.5em 0.5em 5px 0.5em;margin: 0 0 5px 0;">Databases</span>
+								<span class="badge" style="background-color : #67809F;padding: 0.5em 0.5em 5px 0.5em;margin: 0 0 5px 0;">Big Data</span>
+								<span class="badge" style="background-color : #67809F;padding: 0.5em 0.5em 5px 0.5em;margin: 0 0 5px 0;">Machine Learning</span>
+								<span class="badge" style="background-color : #67809F;padding: 0.5em 0.5em 5px 0.5em;margin: 0 0 5px 0;">Full stack</span>
+								<span class="badge" style="background-color : #67809F;padding: 0.5em 0.5em 5px 0.5em;margin: 0 0 5px 0;">Scripting</span>
+								<span class="badge" style="background-color : #67809F;padding: 0.5em 0.5em 5px 0.5em;margin: 0 0 5px 0;">Rapid prototyping</span>
+								<span class="badge" style="background-color : #67809F;padding: 0.5em 0.5em 5px 0.5em;margin: 0 0 5px 0;">Development Boards</span>
+								<span class="badge" style="background-color : #67809F;padding: 0.5em 0.5em 5px 0.5em;margin: 0 0 5px 0;">git</span>
+								<span class="badge" style="background-color : #67809F;padding: 0.5em 0.5em 5px 0.5em;margin: 0 0 5px 0;">Data visualization</span>
 							<hr>
 					</div>
 				</div>
@@ -271,7 +272,7 @@
 							<div class="item-detail">
 								<h3>
 									<a target="_blank" href="www.v15.org.il">
-										@V15 
+										@V15
 									</a>
 								</h3>
 								<p class="text-muted">Took part in the biggest (to date) non party related political campaign.</p>
@@ -289,7 +290,7 @@
 							<div class="item-detail">
 								<h3>
 									<a target="_blank" href="http:&#x2F;&#x2F;www.media-noche.org&#x2F;">
-										@Media Noche Salsa 
+										@Media Noche Salsa
 									</a>
 								</h3>
 								<p class="text-muted">Board member and instructor in a free-of-charge dance club &#x2F; organization</p>
@@ -345,7 +346,7 @@
 			</div>
 		</div>
 
-		<link href='http://fonts.googleapis.com/css?family=PT+Mono' rel='stylesheet' type='text/css'>		
+		<link href='http://fonts.googleapis.com/css?family=PT+Mono' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
