--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 							<div class="item-detail">
 								<h3>
 									<span>Senior software engineer</span>
-									<span class="pull-right">( 2016 - Present )</span>
+									<span class="pull-right">( 2016 )</span>
 								</h3>
 								<h4>
 									<a target="_blank" href="www.mapegy.com">
