added freelance latest experience

--- a/index.html
+++ b/index.html
@@ -126,6 +126,25 @@
 					<div class="col-md-10">
 							<div class="item-detail">
 								<h3>
+									<span>Consultant (Freelance)</span>
+									<span class="pull-right">( 2016 )</span>
+								</h3>
+								<h4>
+									<a target="_blank" href="www.mapegy.com">
+										@Multiple projects, Germny / Israel
+									</a>
+								</h4>
+								<p class="text-muted">Assisted several clients to achieve internal goals.
+									 Both from a process standpoint and from content standpoint</p>
+							</div>
+							<ul>
+								<li>Designed advanced low latency application architecture</li>
+								<li>Implemented UI elements to support and enhance user engagement</li>
+								<li>Incorporated ML and recommendation systems algorithms to existing product</li>
+							</ul>
+							<hr>
+							<div class="item-detail">
+								<h3>
 									<span>Senior software engineer</span>
 									<span class="pull-right">( 2016 )</span>
 								</h3>
