updated work experience

--- a/index.html
+++ b/index.html
@@ -126,21 +126,36 @@
 					<div class="col-md-10">
 							<div class="item-detail">
 								<h3>
-									<span>Consultant (Freelance)</span>
-									<span class="pull-right">( 2016 )</span>
+									<span>Stealth fintech app - Lead developer</span>
+									<span class="pull-right">( 2016 - 2017 )</span>
 								</h3>
 								<h4>
-									<a target="_blank" href="www.mapegy.com">
-										@Multiple projects, Germny / Israel
+									<a target="#">
+										@Germny / Israel
 									</a>
 								</h4>
-								<p class="text-muted">Assisted several clients to achieve internal goals.
-									 Both from a process standpoint and from content standpoint</p>
+								<p class="text-muted">Leading the development of fintech application in the algotrading domain</p>
 							</div>
 							<ul>
-								<li>Designed advanced low latency application architecture</li>
-								<li>Implemented UI elements to support and enhance user engagement</li>
-								<li>Incorporated ML and recommendation systems algorithms to existing product</li>
+								<li>Designed the architecture of the project</li>
+								<li>Implemented the vast majority of functionality</li>
+							</ul>
+							<hr>
+							<div class="item-detail">
+								<h3>
+									<span>Senior software engineer</span>
+									<span class="pull-right">( 2017 )</span>
+								</h3>
+								<h4>
+									<a target="_blank", href="https://cliqz.com/en/">
+										@Cliqz GmbH, Munich, Germny
+									</a>
+								</h4>
+								<p class="text-muted">Core-team member</p>
+							</div>
+							<ul>
+								<li>Worked on the company proprietary Firefox based browser and extension</li>
+								<li>Focused mainly on low level client-side development</li>
 							</ul>
 							<hr>
 							<div class="item-detail">
