--- a/index.html
+++ b/index.html
@@ -297,10 +297,11 @@
 								<span class="badge" style="background-color : #67809F;padding: 0.5em 0.5em 5px 0.5em;margin: 0 0 5px 0;">Frontend</span>
 								<span class="badge" style="background-color : #67809F;padding: 0.5em 0.5em 5px 0.5em;margin: 0 0 5px 0;">Backend</span>
 								<span class="badge" style="background-color : #67809F;padding: 0.5em 0.5em 5px 0.5em;margin: 0 0 5px 0;">Full stack</span>
+								<span class="badge" style="background-color : #67809F;padding: 0.5em 0.5em 5px 0.5em;margin: 0 0 5px 0;">Security</span>
 								<span class="badge" style="background-color : #67809F;padding: 0.5em 0.5em 5px 0.5em;margin: 0 0 5px 0;">Databases</span>
 								<span class="badge" style="background-color : #67809F;padding: 0.5em 0.5em 5px 0.5em;margin: 0 0 5px 0;">Big Data</span>
 								<span class="badge" style="background-color : #67809F;padding: 0.5em 0.5em 5px 0.5em;margin: 0 0 5px 0;">Machine Learning</span>
-								<span class="badge" style="background-color : #67809F;padding: 0.5em 0.5em 5px 0.5em;margin: 0 0 5px 0;">Scripting</span>
+								<span class="badge" style="background-color : #67809F;padding: 0.5em 0.5em 5px 0.5em;margin: 0 0 5px 0;">Scripting & utilities</span>
 								<span class="badge" style="background-color : #67809F;padding: 0.5em 0.5em 5px 0.5em;margin: 0 0 5px 0;">Rapid prototyping</span>
 								<span class="badge" style="background-color : #67809F;padding: 0.5em 0.5em 5px 0.5em;margin: 0 0 5px 0;">Development Boards</span>
 								<span class="badge" style="background-color : #67809F;padding: 0.5em 0.5em 5px 0.5em;margin: 0 0 5px 0;">git</span>
@@ -353,9 +354,9 @@
 					<div class="col-md-10">
 						<div class="item-detail">
 							<ul>
-								<li><h4>Hebrew - Mother tongue</h4></li>
+								<li><h4>Hebrew - Native or bilingual proficiency</h4></li>
 								<li><h4>English - Full professional proficiency</h4></li>
-								<li><h4>German - Limited professional proficiency</h4></li>
+								<li><h4>German - Limited working proficiency</h4></li>
 							</ul>
 						</div>
 						<hr>
