updated recommendations section

--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
 						</div>
 						<div class="item-detail" style="margin-top: 2rem;">
 							<h4>
-								<span>In his work, Yotam Katznelson presented outstanding capabilities. He worked dedicatedly and with high degree of self-motivation, foresaw problems long before they presented themselves and brought to the table a fresh mind and keen desire for elegant and simple problem solving."</span>
+								<span>In his work, Yotam Katznelson presented outstanding capabilities. He presented outstanding degree of commitement for the project, foresaw problems long before they presented themselves and brought to the table a fresh mind and keen desire for elegant and simple problem solving."</span>
 							</h4>
 							<h5 style="margin-top: -0.4rem;">Amnon Demri, CEO, Quickest Owl Ltd.</h5>
 						</div>
