added text to cliqz section

--- a/index.html
+++ b/index.html
@@ -151,11 +151,12 @@
 										@Cliqz GmbH, Munich, Germny
 									</a>
 								</h4>
-								<p class="text-muted">Core-team member</p>
+								<p class="text-muted">Cliqz is developing a multi platform web browser that emphasizes the privacy and protection of the user while maintaining standards and pushing edges of technology when it comes to browsing speed and latency</p>
 							</div>
 							<ul>
-								<li>Worked on the company proprietary Firefox based browser and extension</li>
-								<li>Focused mainly on low level client-side development</li>
+								<li>Member of the core browser team. Worked on the company proprietary Firefox based browser and extension</li>
+								<li>Focused mainly on low level client-side developments (low-level front end - C++ & vanilla JS)</li>
+								<li>Implemented solutions to various problems from wide range of domains (graphics rendering, communication protocols utilization optimization, security related concerns) using advanced modern standards</li>
 							</ul>
 							<hr>
 							<div class="item-detail">
@@ -208,7 +209,7 @@
 								<p class="text-muted">Ayyeka develops low  energy remote monitoring solutions for various industries. Ayyeka provides holistic autonomous data collection system that integrates with cloud services and enables comprehensive insights on the collected data</p>
 							</div>
 							<ul>
-								<li>Managed the company devops section. Was the mediator between the costumers and the engineers. Facilitated enhancements and resolutions for various subjects</li>
+								<li>Managed the company devops section. Was the mediator between the customers and the engineers. Facilitated enhancements and resolutions for various subjects</li>
 								<li>Developed essential monitoring systems for the company products</li>
 								<li>The &quot;quick &amp; dirty guy&quot; for high demand quick solutions for any technological development problem</li>
 							</ul>
