updated linkedin public profile

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 						Esplanade 5, Berlin, DE 13187
 						<br>
 						<span class="social-links-wrapper">
-							<a href="https:&#x2F;&#x2F;il.linkedin.com&#x2F;in&#x2F;yotam-katznelson-59261493" target="_blank">Linkedin</a>&nbsp;&nbsp;
+							<a href="https://www.linkedin.com/in/yotam-katznelson/" target="_blank">Linkedin</a>&nbsp;&nbsp;
 						</span>
 					</p>
 					<p class="location text-right col-md-6">
