updated second mapegy position

--- a/index.html
+++ b/index.html
@@ -169,9 +169,10 @@
 										@Mapegy GmbH, Berlin, Germny
 									</a>
 								</h4>
-								<p class="text-muted">In this position I focus on two major fields: Full stack developer, focusing on delivering fast and optimized results of the product both on front and back. The second is as data engineer, creating and translating ideas into actions and expand the data universe of the company.</p>
+								<p class="text-muted">Mapegy GmbH is a business consulting agency that provides high tech and innovation consulting, derived from collection massive data sources.</p>
 							</div>
 							<ul>
+								<li>The role was divided equally between full stack front end development and hardcore data engineering</li>
 								<li>Working closely with the PM&#x2F;sales&#x2F;colleagues in fast pace release oriented development cycles</li>
 								<li>Integrating data sources and enriching&#x2F;improving quality of data and data analysis techniques</li>
 								<li>Supporting and mentoring junior developers</li>
